tests/models/enum/named/u32/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(lt = 2)]
        value: u32
    },
}
fn main() {}
